@@ -8,18 +8,33 @@ import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
+import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.baomidou.mybatisplus.core.metadata.IPage;
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
+import com.yoswell.agenticrag.common.exception.BusinessException;
+import com.yoswell.agenticrag.common.exception.ErrorCode;
 import com.yoswell.agenticrag.platform.session.cache.SessionRedisManager;
-import com.yoswell.agenticrag.platform.session.dto.SessionCreateRequest;
-import com.yoswell.agenticrag.platform.session.dto.SessionUpdateRequest;
-import com.yoswell.agenticrag.platform.session.entity.ChatMessage;
-import com.yoswell.agenticrag.platform.session.entity.ChatSession;
+import com.yoswell.agenticrag.platform.session.constants.SessionStatusConstants;
+import com.yoswell.agenticrag.platform.session.dto.request.SessionCreateRequestDTO;
+import com.yoswell.agenticrag.platform.session.dto.request.SessionUpdateRequestDTO;
+import com.yoswell.agenticrag.platform.session.dto.response.SessionDetailsRespDTO;
+import com.yoswell.agenticrag.platform.session.entity.ChatMessageDO;
+import com.yoswell.agenticrag.platform.session.entity.ChatSessionDO;
 import com.yoswell.agenticrag.platform.session.event.SessionCreatedEvent;
 import com.yoswell.agenticrag.platform.session.mapper.ChatMessageMapper;
 import com.yoswell.agenticrag.platform.session.mapper.ChatSessionMapper;
 
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+
+/**
+ * 会话生命周期管理服务
+ *
+ * <p>负责会话创建、查询、更新与状态流转，并维护 Redis 会话元数据缓存一致性</p>
+ */
 @Service
+@RequiredArgsConstructor
+@Slf4j
 public class SessionService {
 
     private final ChatSessionMapper sessionMapper;
@@ -27,21 +42,21 @@ public class SessionService {
     private final SessionRedisManager redisManager;
     private final ApplicationEventPublisher eventPublisher;
 
-    public SessionService(ChatSessionMapper sessionMapper,
-                          ChatMessageMapper messageMapper,
-                          SessionRedisManager redisManager,
-                          ApplicationEventPublisher eventPublisher) {
-        this.sessionMapper = sessionMapper;
-        this.messageMapper = messageMapper;
-        this.redisManager = redisManager;
-        this.eventPublisher = eventPublisher;
-    }
-
+    /**
+     * 创建新会话
+     *
+     * <p>创建后会写入会话元数据缓存，并将该会话设置为当前用户的活跃会话</p>
+     *
+     * @param userId 操作用户 ID
+     * @param request 创建参数
+     * @return 新建后的会话实体
+     */
     @Transactional
-    public ChatSession createSession(String userId, SessionCreateRequest request) {
-        ChatSession session = new ChatSession();
+    public ChatSessionDO createSession(String userId, SessionCreateRequestDTO request) {
+        ChatSessionDO session = new ChatSessionDO();
         session.setSessionId(UUID.randomUUID().toString());
-        session.setUserId(Long.parseLong(userId));
+        session.setUserId(userId);
+        session.setStatus(SessionStatusConstants.ACTIVE.getCode());
         if (request != null && request.getModelId() != null) {
             session.setModelId(request.getModelId());
         }
@@ -56,51 +71,120 @@ public class SessionService {
         return session;
     }
 
-    public Page<ChatSession> getSessions(String userId, String status, int page, int size) {
-        Page<ChatSession> p = new Page<>(page, size);
-        return sessionMapper.selectPage(p, new QueryWrapper<ChatSession>()
-                .eq("user_id", userId)
-                .eq("status", status)
-                .orderByDesc("updated_at", "pinned"));
+    /**
+     * 分页查询当前用户会话
+     *
+     * <p>当未指定状态时默认查询 ACTIVE 会话，按更新时间和置顶标记倒序排序</p>
+     *
+     * @param userId 用户 ID
+     * @param status 状态筛选
+     * @param page 页码
+     * @param size 每页大小
+     * @return 会话分页结果
+     */
+    public IPage<ChatSessionDO> getSessions(String userId, SessionStatusConstants status, int page, int size) {
+        int targetStatusCode = SessionStatusConstants.ACTIVE.getCode();
+        if (status != null) {
+            targetStatusCode = status.getCode();
+        }
+        Page<ChatSessionDO> p = new Page<>(toMybatisCurrentPage(page), size);
+        return sessionMapper.selectPage(p, new LambdaQueryWrapper<ChatSessionDO>()
+                .eq(ChatSessionDO::getUserId, userId)
+                .eq(ChatSessionDO::getStatus, targetStatusCode)
+                .orderByDesc(ChatSessionDO::getUpdatedAt, ChatSessionDO::getPinned));
     }
 
-    public ChatSession getSession(String sessionId, String userId) {
-        ChatSession session = redisManager.getSessionMetaOrFallback(sessionId, () ->
-            sessionMapper.selectOne(new QueryWrapper<ChatSession>().eq("session_id", sessionId))
+    /**
+     * 查询并校验会话归属
+     *
+     * <p>优先读取缓存，缓存未命中时回源数据库；若会话不存在或不属于当前用户则抛出异常</p>
+     *
+     * @param sessionId 会话 ID
+     * @param userId 当前用户 ID
+     * @return 会话实体
+     * @throws BusinessException 会话不存在或无权访问
+     */
+    public ChatSessionDO getSessionBySessionId(String sessionId, String userId) {
+        ChatSessionDO session = redisManager.getSessionMetaOrFallback(sessionId, () ->
+            sessionMapper.selectOne(new LambdaQueryWrapper<ChatSessionDO>().eq(ChatSessionDO::getSessionId, sessionId))
         );
 
-        if (session == null || !session.getUserId().toString().equals(userId)) {
-            throw new RuntimeException("Session not found or forbidden");
+        if (session == null || !userId.equals(session.getUserId())) {
+            throw new BusinessException(ErrorCode.SESSION_NOT_FOUND.getCode(), ErrorCode.SESSION_NOT_FOUND.getMessage() + sessionId);
         }
         return session;
     }
 
-    public Page<ChatMessage> getSessionMessages(String sessionId, String userId, int page, int size) {
-        getSession(sessionId, userId);
-        Page<ChatMessage> p = new Page<>(page, size);
-        return messageMapper.selectPage(p, new QueryWrapper<ChatMessage>()
-                .eq("session_id", sessionId)
-                .orderByAsc("created_at"));
-    }
-    public void verifySessionAccess(String sessionId, String userId) {
-        if ("default_session".equals(sessionId)) {
-            return;
-        }
-        // This will naturally throw an exception if the session doesn't belong to the user or doesn't exist
-        getSession(sessionId, userId);
+    /**
+     * 分页查询会话消息
+     *
+     * <p>调用前会先做会话归属校验</p>
+     *
+     * @param sessionId 会话 ID
+     * @param userId 当前用户 ID
+     * @param page 页码
+     * @param size 每页大小
+     * @return 消息分页结果
+     */
+    public IPage<ChatMessageDO> getSessionMessages(String sessionId, String userId, int page, int size) {
+        getSessionBySessionId(sessionId, userId);
+        Page<ChatMessageDO> p = new Page<>(toMybatisCurrentPage(page), size);
+        return messageMapper.selectPage(p, new LambdaQueryWrapper<ChatMessageDO>()
+                .eq(ChatMessageDO::getSessionId, sessionId)
+                .orderByAsc(ChatMessageDO::getCreatedAt));
     }
 
-    public java.util.Map<String, Object> getSessionDetails(String sessionId, String userId, int page, int size) {
-        ChatSession session = getSession(sessionId, userId);
-        Page<ChatMessage> messages = getSessionMessages(sessionId, userId, page, size);
-        return java.util.Map.of(
-            "session", session,
-            "messages", messages
-        );
+    /**
+     * 将前端传入的 0-based 页码转换为 MyBatis Plus 的 1-based 页码
+     */
+    private long toMybatisCurrentPage(int zeroBasedPage) {
+        return Math.max(1L, (long) zeroBasedPage + 1L);
     }
+
+    /**
+     * 校验会话访问权限
+     *
+     * <p>当 sessionId 为空或会话不属于当前用户时抛出业务异常</p>
+     *
+     * @param sessionId 会话 ID
+     * @param userId 当前用户 ID
+     */
+    public void verifySessionAccess(String sessionId, String userId) {
+        // 在会话不存在或者不属于该用户时抛出异常
+        if (sessionId == null || sessionId.trim().isEmpty()) {
+            throw new BusinessException(ErrorCode.MISSING_SESSION_ID.getCode(), ErrorCode.MISSING_SESSION_ID.getMessage());
+        }
+        getSessionBySessionId(sessionId, userId);
+    }
+
+    /**
+     * 查询会话详情（会话信息 + 消息分页）
+     *
+     * @param sessionId 会话 ID
+     * @param userId 当前用户 ID
+     * @param page 消息页码
+     * @param size 每页大小
+     * @return 详情聚合响应
+     */
+    public SessionDetailsRespDTO getSessionDetails(String sessionId, String userId, int page, int size) {
+        ChatSessionDO session = getSessionBySessionId(sessionId, userId);
+        IPage<ChatMessageDO> messages = getSessionMessages(sessionId, userId, page, size);
+        return new SessionDetailsRespDTO(session, messages);
+    }
+
+    /**
+     * 更新会话元信息
+     *
+     * <p>当前支持标题与置顶标记更新；仅当字段发生变化时才写库并刷新缓存</p>
+     *
+     * @param sessionId 会话 ID
+     * @param userId 当前用户 ID
+     * @param request 更新参数
+     * @return 更新后的会话实体
+     */
     @Transactional
-    public ChatSession updateSession(String sessionId, String userId, SessionUpdateRequest request) {
-        ChatSession session = getSession(sessionId, userId);
+    public ChatSessionDO updateSession(String sessionId, String userId, SessionUpdateRequestDTO request) {
+        ChatSessionDO session = getSessionBySessionId(sessionId, userId);
 
         boolean updated = false;
         if (request.getTitle() != null) {
@@ -120,30 +204,50 @@ public class SessionService {
         return session;
     }
 
+    /**
+     * 删除或归档会话（状态流转）
+     *
+     * <p>仅允许状态向后流转状态变更后会清理会话缓存，并在必要时重置用户活跃会话指针</p>
+     *
+     * @param sessionId 会话 ID
+     * @param userId 当前用户 ID
+     * @param targetStatus 目标状态
+     */
     @Transactional
-    public void deleteSession(String sessionId, String userId, String mode) {
-        ChatSession session = getSession(sessionId, userId);
+    public void deleteSession(String sessionId, String userId, SessionStatusConstants targetStatus) {
+        ChatSessionDO session = getSessionBySessionId(sessionId, userId);
 
-        if ("permanent".equalsIgnoreCase(mode)) {
-            sessionMapper.deleteById(session.getId());
-            messageMapper.delete(new QueryWrapper<ChatMessage>().eq("session_id", sessionId));
-        } else {
-            session.setStatus("ARCHIVED");
-            session.setArchivedAt(LocalDateTime.now());
-            sessionMapper.updateById(session);
+        // 0 ACTIVE, 1 ARCHIVED, 2 DELETED
+        if (targetStatus.getCode() < session.getStatus()) {
+            log.warn("[Session Service] Invalid session status transition from {} to {}", session.getStatus(), targetStatus.getCode());
+            throw new BusinessException(ErrorCode.INVALID_SESSION_STATUS_TRANSITION.getCode(), ErrorCode.INVALID_SESSION_STATUS_TRANSITION.getMessage());
         }
 
+        if (targetStatus.getCode() == session.getStatus()) {
+            log.warn("[Session Service] Session is already in target status: {}", targetStatus.getDescription());
+            throw new BusinessException(ErrorCode.SESSION_ALREADY_IN_TARGET_STATUS.getCode(), ErrorCode.SESSION_ALREADY_IN_TARGET_STATUS.getMessage() + targetStatus.name());
+        }
+
+        if (targetStatus == SessionStatusConstants.ARCHIVED) {
+            session.setArchivedAt(LocalDateTime.now());
+        }
+
+        session.setStatus(targetStatus.getCode());
+        session.setUpdatedAt(LocalDateTime.now());
+        sessionMapper.updateById(session);
         redisManager.clearSessionCache(sessionId);
 
+        // Update user's current active session if necessary
+
         if (sessionId.equals(redisManager.getActiveSession(userId))) {
-            List<ChatSession> activeSessions = sessionMapper.selectList(
-                new QueryWrapper<ChatSession>()
-                    .eq("user_id", userId)
-                    .eq("status", "ACTIVE")
-                    .orderByDesc("updated_at")
+            List<ChatSessionDO> activeSessions = sessionMapper.selectList(
+                new LambdaQueryWrapper<ChatSessionDO>()
+                    .eq(ChatSessionDO::getUserId, userId)
+                    .eq(ChatSessionDO::getStatus, SessionStatusConstants.ACTIVE.getCode())
+                    .orderByDesc(ChatSessionDO::getUpdatedAt)
             );
             if (!activeSessions.isEmpty()) {
-                redisManager.setActiveSession(userId, activeSessions.get(0).getSessionId());
+                redisManager.setActiveSession(userId, activeSessions.getFirst().getSessionId());
             } else {
                 redisManager.setActiveSession(userId, null);
             }
